Corrección InventarioConsola